@@ -7,6 +7,7 @@ and ideas to make this software available.
 	DJ <dj@gregor.com>
 	Leif Hedstrom <leif@netscape.com>
 	Jeff Mandel <jeff.mandel@probes.com>
+	Michael Mattice <mike@bmisystems.com>
 	Doug Nazar <nazard@dragoninc.on.ca>
 	Rakesh Patel <rpatel@globix.com>
 	Nathan Hawkins <Nathan.Hawkins@FMR.COM>
